fix: hero wrap

--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -22,6 +22,13 @@
     @media (max-width: 992px) {
         background-size: cover !important;
     }
+
+    @media (max-width: 768px) {
+        // background-size: cover !important;
+
+        height: 600px;
+    }
+    
 }
 
 .box {
